--- a/index.css
+++ b/index.css
@@ -75,8 +75,27 @@ nav ul li a {
 }
 
 .product {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     text-align: center;
     margin-bottom: 50px;
+}
+
+.product-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 20px;
+}
+
+.product-item {
+    width: 250px;
+    min-width: 199px;
+    height: 260px;
+    text-align: center;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 10px;
 }
 
 .product img {
